# pyFuRNAce

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  packages.txt  pyproject.toml  requirements-ci.txt  requirements-stable.txt  requirements.txt  stable_requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  pypi_publish.yml  st_cloud_GA4.yml
.streamlit/: config.toml
docs/: energy_parameters.json  requirements.txt
docs/source/: about.rst  api.rst  conf.py  examples.rst  gui_examples.rst  home.rst  index.rst  installation.rst  limitations.rst  pyfurnace.app.utils.rst  pyfurnace.design.motifs.rst  pyfurnace.generate.rst  pyfurnace.prepare.rst  refs.bib  script_examples.rst  tutorials.rst
docs/source/notebooks/: droplets.ipynb  rna_filament.ipynb
examples/: ROAD_Origami.ipynb  basic_usage.py  droplets.ipynb  rna_filament.ipynb  rna_filament.py  scaffold_barriers_opti_full.py
pyfurnace/: __init__.py  __main__.py
pyfurnace/app/: Home.py  streamlit_app.py
pyfurnace/app/pages/: 0_Home.py  1_Design.py  2_Generate.py  3_Convert.py  3_Template.py  4_Prepare.py  4_Primers.py
pyfurnace/app/utils/: __init__.py  design_functions.py  google_analytics.html  motifs_icons.py  template_functions.py
pyfurnace/app/utils/commands/: aptamers_command.py  connections_command.py  dovetail_command.py  general_edit_command.py  kissing_loops_command.py  stem_command.py  structural_command.py  tetraloop_command.py
pyfurnace/app/utils/md_setup/: MC_relax.txt  MD_equil.txt  MD_prod.txt  MD_relax.txt
pyfurnace/design/core/: __init__.py  basepair.py  callback.py  coordinates_3d.py  motif.py  origami.py  position.py  sequence.py  strand.py  symbols.py
pyfurnace/design/motifs/: __init__.py  aptamers.py  dovetail.py  kissing_loops.py  loops.py  stem.py  structural.py
pyfurnace/design/utils/: motif_lib.py  origami_lib.py
pyfurnace/generate/: __init__.py  pk_utils.py  revolvr.pl  road.py  utils.py  viennarna.py
pyfurnace/generate/road_bin/: viennarna_funcs.py
pyfurnace/prepare/: oxdna_sim.py  utils.py
scripts/: find_ae.py  optimize_AE_cross.py  plot_oxDNA_conf.py
tests/: test_motif.py  test_strand.py
tests/0_design/core/: test_basepair.py  test_callback.py  test_coords_3d.py  test_motif.py  test_origami.py  test_position.py  test_sequence.py  test_strand.py  test_symbols.py
tests/0_design/motifs_and_utils/: test_aptamers.py  test_dovetails.py  test_kissing_loops.py  test_loop.py  test_motif_lib.py  test_origami_lib.py  test_stem.py  test_structural.py
tests/0_design/saving_loading/: test_json.py
tests/1_generate/: test_generate_road.py  test_pk_utils.py  test_viennarna.py
tests/2_app/: test_page_design.py
tests/9_oat_import/: test_strand_oat_missing.py
tests/app/: test_page_design.py
tests/design/core/: test_motif.py
tests/generate/: test_generate_road.py
